2015-10-16  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am [BUILD_STATIC] (libdw): Add -lz.
	[BUILD_STATIC] (libelf): Likewise.

2015-10-16  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (dwfl_proc_attach_LDFLAGS): Add AM_LDFLAGS.

2015-10-09  Josh Stone  <jistone@redhat.com>

	* lfs-symbols: New list of LFS-related symbols from lintian.
	* testfile-nolfs.bz2: New test binary for sanity checking.
	* run-lfs-symbols.sh: New test.
	* Makefile.am (TESTS): Add run-lfs-symbols.sh.
	(EXTRA_DIST): Add lfs-symbols, testfile-nolfs.bz2, and
	run-lfs-symbols.sh.
	* alldts.c (main): Replace open64 with open.
	* dwarf-getstring.c (main): Likewise.
	* arls.c: Include config.h.
	* ecp.c: Likewise.
	* rdwrmmap.c: Likewise.
	* test-elf_cntl_gelf_getshdr.c: Likewise.
	* test-flag-nobits.c: Include config.h.
	(main): Replace open64 with open.

2015-10-09  Mark Wielaard  <mjw@redhat.com>

	* elfshphehdr.c (check): Rename argument from check to statement.
	(check_elf): Likewise.

2015-10-05  Josh Stone  <jistone@redhat.com>

	* Makefile.am (backtrace-child-biarch): Add AM_V_CC silencer.

2015-10-02  Mark Wielaard  <mjw@redhat.com>

	* elfstrmerge.c: New check program.
	* run-strip-strmerge.sh: New test.
	* Makefile.am (check_PROGRAMS): Add elfstrmerge.
	(EXTRA_DIST): Add run-strip-strmerge.sh
	(elfstrmerge_LDADD): New variable.

2015-09-29  Mark Wielaard  <mjw@redhat.com>

	* elfshphehdr.c: New test.
	* Makefile.am (check_PROGRAMS): Add elfshphehdr.
	(TESTS): Likewise.
	(elfshphehdr_LDADD): New variable.

2015-09-08  Mark Wielaard  <mjw@redhat.com>

	* dwfl-proc-attach.c: New test.
	* Makefile.am (check_PROGRAMS): Add dwfl-proc-attach.
	(TESTS): Likewise.
	(dwfl_proc_attach_LDADD): New variable.
	(dwfl_proc_attach_LDFLAGS): Likewise.

2015-09-04  Chih-Hung Hsieh  <chh@google.com>

	* varlocs.c (print_base_type): Initialize enctype.

2015-09-04  Chih-Hung Hsieh  <chh@google.com>

	* md5-sha1-test.c (md5_expected): Removed.
	(sha1_expected): Likewise.
